client/style.css
:root {
  --app-primary-color: #2196F3;
}

html, body {
  margin: 0;
  padding: 0;
  font-family: 'Roboto', sans-serif;
  overflow-y: hidden;
  overflow-x: hidden;
}

path {
  stroke-width: 1px;
  stroke: white;
  cursor: pointer;
}

path:hover, path.highlighted {
  fill: #999;
}

#content {
  display: flex;
  flex-direction: row;
}

#sidebar {
  display: flex;
  flex-direction: column;
  max-width: 20vw;
  background: #FFF;
  padding: 16px;
  height: 100vh;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  transition: all .25s ease-in-out;
}

.selector {
  width: 100%;
  padding: 8px;
  margin: 8px 0 8px 0;
  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
  background: #fff;
  border-radius: 3px;
  min-height: 2vh;
}

.selector:hover {
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

a {
  text-decoration: none;
  color: white;
  margin: 0 8px 0 8px;
  transition: color .1s linear;
}

a:hover {
  color: #CFD8DC;
}

.container-fluid {
   padding: 0px !important
}

.nav {
  display: flex;
  align-items: center;
  width: 100vw;
  height: 8vh;
  background: var(--app-primary-color);
  padding-left: 16px;
  color: #FFF;
  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
  font-size: 1.4em;
}

.tooltip {
  background: #3F51B5;
  border-radius: 3px;
  color: #FFF;
  padding: 6px;
}

#nav-button {
  width: 32px;
  height: 32px;
}

#map {
  margin: 8px 0 0 8px;
}

